# Chaotic-DAW

./: .gitignore  .gitmodules  .rules  Awful.cpp  Awful.h  Awful_CursorAndMouse.h  Awful_JuceComponents.cpp  Awful_JuceComponents.h  Awful_JuceWindows.cpp  Awful_JuceWindows.h  Awful_audio.cpp  Awful_audio.h  Awful_effects.cpp  Awful_elements.cpp  Awful_graphJuce.cpp  Awful_graphJuce.h  Awful_instruments.cpp  Awful_juceext.h  Awful_logger.cpp  Awful_midi.h  Awful_panels.cpp  Awful_panels.h  Awful_parammodule.cpp  Awful_preview.cpp  Awful_preview.h  Awful_renderer.cpp  Awful_renderer.h  Awful_utils_common.cpp  Awful_utils_common.h  CMakeLists.txt  CVSTHost.cpp  CVSTHost.h  PlatformDefs.h  README.md  StdAfx.h  VSTCollection.cpp  VSTCollection.h  awful.h  awful_audio.h  awful_audiohost.cpp  (+24 more)
.github/workflows/: build.yml
Data sources/: bold.h
build_win32/: CMakeCache.txt  Makefile  cmake_install.cmake
juce/: juce_amalgamated.h
packaging/linux/: build-deb.sh  chaotic-daw.desktop
packaging/windows/: Awful.rc  build-sndfile-deps.sh  build-win.sh  mingw-toolchain-x86_64.cmake  mingw-toolchain.cmake
packaging/windows/x64/: libsndfile-1-x64.lib
rosic/basics/: GlobalDefinitions.h  rosic_NumberManipulations.h
rosic/datastructures/: rosic_String.cpp  rosic_String.h
rosic/dynamics/: rosic_SoftKneeCompressor.cpp
rosic/effects/: rosic_Waveshaper.h
rosic/filters/: rosic_DampingFilter.h
rosic/infrastructure/: rosic_MutexLock.cpp
rosic/math/: rosic_CephesDeclarations.h  rosic_Interpolation.h  rosic_RealFunctions.h
vst2compat/: AEffEditor.hpp  aeffEditor.h  aeffectx.h  audioeffectx.h
